# riscv-embassy-mess-work

./: .gitignore  NOTE.txt  readme.md  remember.txt  test.rs
embassy/: Cargo.toml  cortex_m_usage.md
embassy-esp32c3/: Cargo.toml  cargo.toml
embassy-esp32c3/.cargo/: config.toml
embassy-esp32c3/src/: driver.rs  interrupt.rs  lib.rs  rtc_cntl.rs  serial.rs  systimer.rs  timer.rs
embassy-esp32c3/src/timer_TODO/: mod.rs
embassy-macros/: Cargo.toml
embassy-macros/src/macros/: main.rs  task.rs
embassy/src/: lib.rs
embassy/src/blocking_mutex/: mod.rs  raw.rs
embassy/src/executor/: mod.rs  spawner.rs
embassy/src/executor/arch/: cortex_m.rs  riscv32.rs
embassy/src/executor/raw/: timer_queue.rs
embassy/src/interrupt/: interrupt_riscv32.rs
embassy/src/time/: mod.rs
esp-test/: Cargo.toml
esp-test/.cargo/: config.save.toml  config.toml
esp-test/src/: main.rs
examples/async_join/: Cargo.toml  README.md
examples/async_join/src/: main.rs
examples/concurrent_timers/: Cargo.toml
examples/concurrent_timers/src/: main.rs
examples/hello_world/: README.md
examples/hello_world/src/: main.rs
examples/interrupt_mode/: Cargo.toml
examples/interrupt_mode/src/: main.rs
examples/multiple_tasks/: Cargo.toml
examples/multiple_tasks/src/: main.rs
examples/previous_race_condition/: Cargo.toml  README.md
examples/previous_race_condition/src/: main.rs
hello_world/: Cargo.toml
hello_world/src/: main.rs
test/test_SW_INT1/: Cargo.toml  README.md
test/test_SW_INT1/src/: main.rs
test/test_disable_interrupt/: Cargo.toml  README.md
test/test_disable_interrupt/src/: main.rs
test/test_time_driver/: Cargo.toml  README.md
test/test_time_driver/src/: main.rs
test_time_driver/: Cargo.toml
test_time_driver/src/: main.rs
