[package]
name    = "embassy_esp32c3"
version = "0.1.0"
authors = ["osobiehl <osobiehl@me.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
panic-halt   = "0.2"
esp32c3-hal = { package = "esp32c3-hal", git = "https://github.com/esp-rs/esp-hal.git" }
riscv-rt = { version = "0.8", optional = true }
nb = "1.0.0"
embassy = { version = "0.1.0", path = "../embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-macros = {  path = "../embassy-macros", features = ["esp32c3"]}

futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
esp32c3 = "0.4.0"
riscv                       = "0.7"
critical-section = "0.2.5"
embedded-hal = { version = "0.2", features = ["unproven"] }
void         = { version = "1.0", default-features = false }


[features]
default = ["rt"]
rt = ["riscv-rt"]
