[package]
name    = "esp_test"
version = "0.1.0"
authors = ["osobiehl <osobiehl@me.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
panic-halt   = "0.2"
esp32c3-hal = { package = "esp32c3-hal", git = "https://github.com/esp-rs/esp-hal.git" }
riscv-rt = { version = "0.8", optional = true }
nb = "1.0.0"
embassy = {  path = "../embassy", features = ["defmt", "defmt-timestamp-uptime", "time", "time-tick-16mhz"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
embassy_esp32c3 = {path="../embassy-esp32c3"}

[features]
default = ["rt"]
rt = ["riscv-rt"]
